Update Navigation and Pagination.html

--- a/Navigation and Pagination.html
+++ b/Navigation and Pagination.html
@@ -11,9 +11,9 @@
 <header>Pagination</header>
  <div class="pagination">
  <ul>
- <li><a href="#">List</a></li>
- <li><a href="#">Add</a></li>
- <li><a href="#">Delete</a></li>
- <li><a href="#">Update</a></li>
+ <li><a href="#">1</a></li>
+ <li><a href="#">2</a></li>
+ <li><a href="#">3</a></li>
+ <li><a href="#">4</a></li>
  </ul>
  </div>
